# base-container-images

./: Makefile  README.md
.github/workflows/: ci.yaml  node-18.yml  node-20.yml  node-22.yml  node-24.yml  node.yml  publish.yml  python.yml  tag.yaml
examples/node/: Dockerfile  package-lock.json
examples/node-18/: Dockerfile  package.json
examples/node-20/: .dockerignore  Dockerfile
examples/node-22/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/node-24/: Dockerfile  entrypoint.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/python/: .dockerignore  Dockerfile  pyproject.toml
examples/python/hello_python/: app.py
node/: node-base.Dockerfile  node-dev.Dockerfile
node-18/: node-base.Dockerfile  node-dev.Dockerfile
node-20/: node-base.Dockerfile  node-dev.Dockerfile
node-22/: node-base.Dockerfile  node-dev.Dockerfile
node-24/: node-base.Dockerfile  node-dev.Dockerfile
python/: install-poetry-app.sh  python-base.Dockerfile  python-dev.Dockerfile
