[tool.poetry]
name = "hello-python"
version = "0.1.0"
description = "An example Python application running in a container"
authors = ["Mynth"]
packages = [{include = "hello_python"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
